Fix performance findings by findbugs (DIRSERVER-1658)
git-svn-id: https://svn.apache.org/repos/asf/directory/apacheds/trunk@1170196 13f79535-47bb-0310-9956-ffa450edef68